--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,6 +3,7 @@
     <div class="col-12">
       <div class="card">
         <div class="card-header">
+          <button id="logout" type="button" class="btn btn-secondary" (click)="logout()">logout</button>
           <h3>Memory statistics</h3>
         </div>
         <div class="card-body">
@@ -35,6 +36,7 @@
                 </div>
               </div>
             </div>
+
           </div>
 
           <div class="row">
