--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,10 +3,12 @@
   <hr>
   <h3>Login</h3>
   <label for="username">Gebruikersnaam</label>
-  <input type="text" value="" id="username" class="form-control" #username>
+  <input (keyup.enter)="login(username.value,password.value)" type="text" value="" id="username" class="form-control"
+         #username>
   <label for="password">Wachtwoord</label>
-  <input type="password" value="" id="password" class="form-control" #password>
+  <input (keyup.enter)="login(username.value,password.value)" type="password" value="" id="password"
+         class="form-control" #password>
 
   <button (click)="login(username.value,password.value)" class="btn btn-primary" id="login_button"> Login</button>
-  <p *ngIf="errorMsg"><b>{{errorMsg}}</b></p>
+  <p id="error" *ngIf="errorMsg"><b>{{errorMsg}}</b></p>
 </div>
